--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,5 @@ en:
 
   errors:
     invalid_login: 'Invalid login credentials'
+    project_not_found: 'Project not found'
+    project_exist: 'The project with such name does already exist.'
