--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,7 +6,8 @@ en:
     project_not_found: 'Project not found'
     project_exist: 'The project with such name does already exist.'
     task_not_found: 'Task not found'
-    deadline: 'Deadline can not be past'
+    invalid_deadline: 'Deadline is not a date'
+    past_deadline: 'Deadline can not be past'
     invalid_position: 'Invalid task position'
     comment_not_found: 'Comment not found'
     invalid_image_type: 'Wrong file format. You can upload a *.jpg or *.png formats files only'
